Added authentication ... thanks esmondb

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -18,6 +18,7 @@
 			"sap.ui.demo.mORMot" : "./"
 		}' >
 	</script>
+	<script src="localService/mORMotClient.js"></script>	
 	<script>
 		sap.ui.getCore().attachInit(function () {
 				sap.ui.require([
