Small view updates.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -28,7 +28,7 @@
 
 					new Shell("Shell", {
 						title : "mORMot demo",
-						showLogout : false,
+						showLogout : true,
 						app : new ComponentContainer({
 							name : 'sap.ui.demo.mORMot'
 						}),
