--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,7 +8,7 @@
 	<script
 		id='sap-ui-bootstrap'
 		type='text/javascript'
-		src="https://openui5beta.hana.ondemand.com/resources/sap-ui-core.js"
+		src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
 		data-sap-ui-theme='sap_bluecrystal'
 		data-sap-ui-libs='sap.m'
 		data-sap-ui-compatVersion="edge"
